# chaser

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
assets/icons/: CHANGELOG.txt  FILENAME.txt  README.txt
src/: about.py  main.py
tests/: test_catalogger.py
