[tool.poetry]
name = "chaser"
version = "0.1.0"
description = "A toy browser implementated in PyQt6"
authors = ["Lucifer Chase <luciferchase.me@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyQt6 = "^6.2.2"
PyQt6-WebEngine = "^6.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
pre-commit = "^2.16.0"
flake8 = "^4.0.1"
black = {version = "^21.12b0", allow-prereleases = true}
mypy = "^0.930"
isort = "^5.10.1"
# PyQt6's signals and many more things are unnecessarily flagged by mypy
# PyQt6-Stubs is a workaround
pyqt6-stubs = {git = "https://github.com/TilmanK/PyQt6-stubs.git", rev = "main"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79
